--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -187,17 +187,17 @@
 <details id="tab2"> <summary>Payer</summary>
 <p>Understanding the payer's tax obligations:</p>
 <ul>
-<li><a href="#2A">Withholding, remitting and reporting deductions from the payment</a> </li>
-<li><a href="#2B">Distributing the slip</a> </li>
+<li><a href="#2A">Withholding and remitting deductions from the payment</a> </li>
+<li><a href="#2B">Reporting and distributing the slip</a> </li>
 <li><a href="#2C">Reporting the payment on the income tax return</a> </li>
 </ul> 
 
-<h2 id="1A">Withholding, remitting and reporting deductions from the payment</h2>
-<p>The withholding, remitting and reporting are different depending on <strong>who the payment is made to</strong>.</p>
+<h2 id="1A">Withholding and remitting deductions from the payment</h2>
+<p>If the payer makes a payment related to provision of services to a PSB, the withholding and remitting are different depending on <strong>who the payment is made to</strong>.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></p>
 
-<h2 id="2B">Distributing the slip</h2>
+<h2 id="2B">Reporting and distributing the slip</h2>
 <p>Generally, if the payer pays a fee to a PSB to provide a service outside of an employment relationship or tenure of office, the payer <strong>must</strong> fill out a T4A slip. This includes payments of fees for services between businesses, including sole proprietors and corporations. Depending on the situation, the payer may need to fill out a T4A-NR, T5018 or T1204 instead.</p>
 
 <p>If the payer distributes the slips late or does not distribute, the payer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
