--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -130,7 +130,7 @@
 <li><a href="#1">Receiving the slip</a> </li>
 <li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
 <li><a href="#1b">Contributing to the CPP/QPP, EI and QPIP</a> </li>
-<li><a href="#1c">Withholding, remitting and reporting deductions for employees of the PSB</a> </li>
+<li><a href="#1c">Payroll and GST/HST tax obligations for employees of the PSB</a> </li>
 </ul> 
 
 <h2 id="1">Receiving the slip</h2>
@@ -177,11 +177,13 @@
 <li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
 </ul>
 
-<h2 id="1c">Withholding, remitting and reporting deductions for employees of the PSB</h2>
-<p>The PSB must withhold, remit and report deductions for any employees of the PSB's corporation. This is the same as regular corporations. They must also report on a slip any payment made to their employees.</p>
+<h2 id="1c">Payroll and GST/HST tax obligations for employees of the PSB</h2>
+<p>The PSB payroll and GST/HST tax obligations for employees of the PSB are the same as regular corporations.</p>
 
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></p>
-
+<p>Learn more: </p>
+<ul><li><a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
+</ul>
  </details>
 
 <details id="tab2"> <summary>Payer</summary>
