--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -138,7 +138,7 @@
  <p>Learn more: </p>
  <ul>
  <li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a></li>
-<li>Options if the PSB does not expect to get the slip, <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
+<li>Options if the PSB does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
  </ul>	
 
 <h2 id="1a">Reporting the income earned on the income tax return</h2>
@@ -153,9 +153,9 @@
 <li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
-<li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not</strong> eligible for the SBD</li>
-<li><strong>Do not </strong> to claim the SBD on line 430 of the T2 return because they are <strong>not</strong> eligible for the SBD</li>
-<li>Report the PSB's income on line 432 of the T2 return because they are <strong>not</strong> eligible for the general tax reduction</li>
+<li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
+<li><strong>Do not </strong> to claim the SBD on line 430 of the T2 return because they are <strong>not eligible</strong> for the SBD</li>
+<li>Report the PSB's income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
 <li>Report the PSB's income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
 </ul>
 
