--- a/jmlt333/recognized-educational-institutions-outside-canada.html
+++ b/jmlt333/recognized-educational-institutions-outside-canada.html
@@ -298,10 +298,11 @@ Recognized educational institutions outside Canada</h1>
 
     
         <h2>Related information</h2> 
-<p><a href="/en/revenue-agency/services/forms-publications/publications/p105.html">P105 Students and Income Tax</a><br>
-	<a href="/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-1-individuals/folio-2-students/income-tax-folio-s1-f2-c2-tuition-tax-credit.html">Income Tax Folio S1-F2-C2, Tuition Tax Credit</a></p>
+	<ul>
+<li><a href="/en/revenue-agency/services/forms-publications/publications/p105.html">P105 Students and Income Tax</a></li>
+	<li><a href="/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-1-individuals/folio-2-students/income-tax-folio-s1-f2-c2-tuition-tax-credit.html">Income Tax Folio S1-F2-C2, Tuition Tax Credit</a></li>
     
-
+</ul>
 
 </div>
 
@@ -327,7 +328,7 @@ Recognized educational institutions outside Canada</h1>
         <div class="col-xs-12">
             <dl id="wb-dtmd">
     <dt>Date modified:</dt>
-    <dd><time property="dateModified">2023-01-27</time></dd>
+    <dd><time property="dateModified">2023-08-24</time></dd>
 </dl>
         </div>
     </div>
