--- a/jmlt333/recognized-educational-institutions-outside-canada.html
+++ b/jmlt333/recognized-educational-institutions-outside-canada.html
@@ -276,17 +276,17 @@ Recognized educational institutions outside Canada</h1>
 <div class="mwsbodytext text parbase section">
    <p>For the purposes of the tuition tax credit, the Canada Revenue Agency (CRA) maintains a list of:</p> 
 	<ul>
-		<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-32300-your-tuition-education-textbook-amounts/recognized-educational-institutions-outside-canada/universities-higher-educational-institutions.html">recognized universities and educational institutions outside Canada (excluding the United States, the United Kingdom, and all of the Commonwealth countries)</a></li>
-		<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">universities outside Canada registered as qualified donees</a></li>
+		<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-32300-your-tuition-education-textbook-amounts/recognized-educational-institutions-outside-canada/universities-higher-educational-institutions.html">Recognized universities and educational institutions outside Canada (excluding the United States, the United Kingdom, and all of the Commonwealth countries)</a></li>
+		<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">Universities outside Canada registered as qualified donees</a></li>
 	</ul>
 <p>Use these lists to confirm if an educational institution located outside Canada can issue official tax receipts. </p>
 	<p>The educational institutions outside Canada on these lists have been reviewed and approved by the CRA for the purposes of the tuition tax credit. These lists are not all-inclusive and may be subject to change. </p>
 	<p>The United States, the United Kingdom, and the Commonwealth countries maintain their own lists of recognized universities and higher educational institutions. </p>
-	<p>If you are a student enrolling at a foreign university, college, or other post-secondary educational institution outside Canada, review the information available for students.</p>
-	<p><a href="">Information for Students – Educational institutions outside Canada </a></p>
+	<p>If you are a <strong>student</strong> enrolling at a foreign university, college, or other post-secondary educational institution outside Canada, review the <a href="">information for students</a>.</p>
+	
     
-     <p>If you are a staff member of a university, college, or other post-secondary educational institution outside Canada who is responsible for completing the certificate that confirms qualifying tuition costs for students, review the information available for educational institutions. </p>
-<p><a href="">Information for educational institutions outside Canada </a></p>
+     <p>If you are a <strong>staff member</strong> of a university, college, or other post-secondary educational institution outside Canada who is responsible for completing the certificate that confirms qualifying tuition costs for students, review the <a href="">information for educational institutions</a>.</p>
+
 <p>Students can also direct enquiries regarding educational institutions and the tuition tax credit to the CRA’s general enquiries line at 1-800-959-8281.</p>
 </div>
 
