--- a/jmlt333/recognized-educational-institutions-outside-canada.html
+++ b/jmlt333/recognized-educational-institutions-outside-canada.html
@@ -274,7 +274,7 @@ Recognized educational institutions outside Canada</h1>
 
 </div>
 <div class="mwsbodytext text parbase section">
-   <p>For the purposes of the tuition tax credit, the Canada Revenue Agency (CRA) maintains a list of:</p> 
+    <p>For the purposes of the tuition tax credit, the Canada Revenue Agency (CRA) maintains a list of:</p> 
 	<ul>
 		<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-32300-your-tuition-education-textbook-amounts/recognized-educational-institutions-outside-canada/universities-higher-educational-institutions.html">Recognized universities and educational institutions outside Canada (excluding the United States, the United Kingdom, and all of the Commonwealth countries)</a></li>
 		<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/other-qualified-donees-listings/list-prescribed-universities-outside-canada.html">Universities outside Canada registered as qualified donees</a></li>
@@ -282,7 +282,14 @@ Recognized educational institutions outside Canada</h1>
 <p>Use these lists to confirm if an educational institution located outside Canada can issue official tax receipts. </p>
 	<p>The educational institutions outside Canada on these lists have been reviewed and approved by the CRA for the purposes of the tuition tax credit. These lists are not all-inclusive and may be subject to change. </p>
 	<p>The United States, the United Kingdom, and the Commonwealth countries maintain their own lists of recognized universities and higher educational institutions. </p>
-	<p>If you are a <strong>student</strong> enrolling at a foreign university, college, or other post-secondary educational institution outside Canada, review the <a href="">information for students</a>.</p>
+	<p>If you are a <strong>student</strong> enrolling at a recognized foreign university, college, or other post-secondary educational institution outside Canada, <strong>and</strong> file a Canadian Income Tax and Benefit Return, you should ask your educational institution to complete the form applicable to your situation.</p>
+	<p>In order to support your eligibility for Canadian tax credits for qualifying education, you must have a one of the following forms filled in and certified:</p>
+	<ul>
+		<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/tl11a.html">TL11A, Tuition and Enrolment Certificate – University Outside Canada</a></li>
+		<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/tl11c.html">TL11C, Tuition and Enrolment Certificate – Commuter to the United States</a></li>
+		<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/tl11d.html">TL11D, Tuition Fees Certificate – Educational Institutions Outside Canada for a Deemed Resident of Canada</a></li>
+	</ul>
+	review the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc192/information-students-educational-institutions-outside-canada.html">information for students</a>.</p>
 	
     
      <p>If you are a <strong>staff member</strong> of a university, college, or other post-secondary educational institution outside Canada who is responsible for completing the certificate that confirms qualifying tuition costs for students, review the <a href="">information for educational institutions</a>.</p>
