--- a/jmlt333/recognized-educational-institutions-outside-canada.html
+++ b/jmlt333/recognized-educational-institutions-outside-canada.html
@@ -289,12 +289,14 @@ Recognized educational institutions outside Canada</h1>
 		<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/tl11c.html">TL11C, Tuition and Enrolment Certificate – Commuter to the United States</a></li>
 		<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/tl11d.html">TL11D, Tuition Fees Certificate – Educational Institutions Outside Canada for a Deemed Resident of Canada</a></li>
 	</ul>
-	review the <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc192/information-students-educational-institutions-outside-canada.html">information for students</a>.</p>
-	
+	<p>To better understand your obligations, review the information for students.</p>
+	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc192/information-students-educational-institutions-outside-canada.html">Information for students (educational institutions outside Canada)</a></p>
+	<p>Students can also direct enquiries regarding educational institutions and the tuition tax credit to the CRA’s general enquiries line at 1-800-959-8281.</p>
     
-     <p>If you are a <strong>staff member</strong> of a university, college, or other post-secondary educational institution outside Canada who is responsible for completing the certificate that confirms qualifying tuition costs for students, review the <a href="">information for educational institutions</a>.</p>
+     <p><strong>Staff members</strong> (of a recognized foreign university, college, or other post-secondary educational institution outside Canada) responsible for completing the certificate that confirms qualifying tuition costs for students can review the information for educational institutions.</p>
+	<p><a href="">Information for educational institutions (outside Canada)</a></p>
 
-<p>Students can also direct enquiries regarding educational institutions and the tuition tax credit to the CRA’s general enquiries line at 1-800-959-8281.</p>
+
 </div>
 
 
