link for schools

--- a/jmlt333/recognized-educational-institutions-outside-canada.html
+++ b/jmlt333/recognized-educational-institutions-outside-canada.html
@@ -294,7 +294,7 @@ Recognized educational institutions outside Canada</h1>
 	<p>Students can also direct enquiries regarding educational institutions and the tuition tax credit to the CRA’s general enquiries line at 1-800-959-8281.</p>
     
      <p><strong>Staff members</strong> (of a recognized foreign university, college, or other post-secondary educational institution outside Canada) responsible for completing the certificate that confirms qualifying tuition costs for students can review the information for educational institutions.</p>
-	<p><a href="">Information for educational institutions (outside Canada)</a></p>
+	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc190/information-educational-institutions-outside-canada.html">Information for educational institutions (outside Canada)</a></p>
 
 
 </div>
