--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -128,12 +128,12 @@
 <p>Understanding the PSB's tax obligations:</p>
 <ul>
 <li><a href="#1">Receiving the slip</a> </li>
-<li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
+<li><a href="#1a">Reporting the income earned on the PSB's income tax return</a> </li>
 <li><a href="#1c">Payroll and GST/HST tax obligations for employees of the PSB</a> </li>
 </ul> 
 
 <h2 id="1">Receiving the slip</h2>
-<p>Generally, the payer <strong>must</strong> provide the PSB with a T4A slip which includes any fees or other amounts paid for services. Depending on the situation, the payer may provide the PSB with a T4A-NR, T5018 or T1204 instead.</p>
+<p>Generally, the payer <strong>must</strong> provide the PSB with a T4A slip which includes any <strong>fees or other amounts paid for services</strong>. Depending on the situation, the payer may provide the PSB with a T4A-NR, T5018 or T1204 instead.</p>
 
  <p>Learn more: </p>
  <ul>
@@ -141,16 +141,16 @@
 <li>Options if the PSB does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
  </ul>	
 
-<h2 id="1a">Reporting the income earned on the income tax return</h2>
+<h2 id="1a">Reporting the income earned on the PSB's income tax return</h2>
 
 <p>When filing the <strong>T2 return</strong>, the PSB must:</p>
 <ul>
 <li><strong>Only</strong> claim the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success"> </span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success"> </span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
-<li><span class="fas fa-check text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
+<li><span class="fas fa-check text-success fa-li fa-lg"></span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success fa-li fa-lg"></span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success fa-li fa-lg"></span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
+<li><span class="fas fa-check text-success fa-li fa-lg"></span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
 <li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
@@ -176,7 +176,7 @@
 <ul>
 <li><a href="#2A">Withholding and remitting deductions from the payment</a> </li>
 <li><a href="#2B">Reporting and distributing the slip</a> </li>
-<li><a href="#2C">Reporting the payment on the income tax return</a> </li>
+<li><a href="#2C">Reporting the payment on the payer's income tax return</a> </li>
 </ul> 
 
 <h2 id="1A">Withholding and remitting deductions from the payment</h2>
@@ -195,7 +195,7 @@
 <li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
 </ul>
 
-<h2 id="2C">Reporting the payment on the income tax return</h2>
+<h2 id="2C">Reporting the payment on the payer's income tax return</h2>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
