--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -154,7 +154,7 @@
 </ul>
  </li>
 <li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
-<li><strong>Do not </strong> to claim the SBD on line 430 of the T2 return because they are <strong>not eligible</strong> for the SBD</li>
+<li><strong>Not claim the SBD</strong> on line 430 of the T2 return because they are <strong>not eligible</strong> for the SBD</li>
 <li>Report the PSB's income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
 <li>Report the PSB's income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
 </ul>
