--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -147,10 +147,10 @@
 <ul>
 <li><strong>Only</strong> claim the following <strong>eligible expenses</strong> on <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information:
 <ul class="fa-ul">
-<li><span class="fas fa-check text-success fa-li fa-lg"></span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success fa-li fa-lg"></span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
-<li><span class="fas fa-check text-success fa-li fa-lg"></span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
-<li><span class="fas fa-check text-success fa-li fa-lg"></span> Legal expenses incurred by the corporation in collecting amounts owing </li>
+<li><span class="fas fa-check text-success fa-li"></span> Salary and wages the corporation pays to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success fa-li"></span> Any benefit or allowance the corporation provides to their employees performing the services of a PSB</li>
+<li><span class="fas fa-check text-success fa-li"></span> Certain expenses of the corporation associated with selling property or negotiating contracts</li>
+<li><span class="fas fa-check text-success fa-li"></span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
 <li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
