--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -115,14 +115,14 @@
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Self-employed worker</a> </li>
+<li><a href="#tab1" class="wb-tabs-ext">Self-employed</a> - Worker </li>
 <li><a href="#tab2" class="wb-tabs-ext">Payer</a> - Payments made to a self-employed worker</li>
 </ul>   
 
  <div class="wb-tabs">
                <div class="tabpanels">
    
- <details id="tab1"><summary>Self-employed worker</summary>
+ <details id="tab1"><summary>Self-employed</summary>
 <p>Understanding the self-employed's tax obligations:</p>
 <ul>
 <li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
@@ -167,28 +167,45 @@
  <details id="tab2"><summary>Payer</summary>
 <p>Understanding the payer's tax obligations:</p>
 <ul>
-<li><a href="#1A">Withholding and remitting deductions from the payment</a> </li>
-<li><a href="#1B">Reporting the payment on the slip</a> </li>
-<li><a href="#2C">Reporting the payment on the income tax return</a> </li>
+<li><a href="#2A">Withholding and remitting deductions from the payment</a> </li>
+<li><a href="#2B">Reporting and distributing the slip</a> </li>
+<li><a href="#2C">Reporting the payment on the payer's income tax return</a> </li>
 </ul> 
 
-<h2 id="1A">Withholding and remitting deductions from the payment</h2>
-<p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
+<h2 id="2A">Withholding and remitting deductions from the payment</h2>
+<p>Generally, the payer <strong>does not</strong> withhold or remit the income tax, EI, CPP or GST/HST on the payment made to a self-employed worker. </p>
+
+<p>Under special EI regulations, the payer <strong>must</strong> withhold and remit EI on behalf of the self-employed worker if the worker is a:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI </li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP </li> 
-<li><span class="fas fa-times text-danger fa-li"></span> GST/HST </li> 
+<li><span class="fas fa-check text-success fa-li"></span> Fisher </li>
+<li><span class="fas fa-check text-success fa-li"></span> Barber or hairdresser </li> 	
+<li><span class="fas fa-check text-success fa-li"></span> Taxi or other passenger vehicle driver </li> 
 </ul>
+
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
- <h2 id="1B">Reporting the payment on the slip</h2>
-<p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. Depending on the situation, the payer may need to fill out a T4A-NR instead.</p>
+ <h2 id="2B">Reporting and distributing the slip</h2>
+<p>Generally, if the payer pays a self-employed worker, the payer <strong>must</strong> report the payment made to:</p> 
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>T4A slip</h4> 
+<p>Self-employed fisher, barber, hairdresser, taxi driver, or a driver of other passenger vehicle</p>
+</li>	
+<li class="cnjnctn-col"><h4>T4 slip</h4> 
+<p>Self-employed farmer and other self-employed workers</p>
 
+</li>
+</ul>
 
-<h2 id="1B">Reporting the payment on the income tax return</h2>
+<p>If the payer distributes the slips late or does not distribute, the payer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
+
+<p>Learn more:</p>
+<ul>
+<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></li>
+<li>Obligations to distribute the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
+</ul>
+
+<h2 id="2C">Reporting the payment on the payer's income tax return</h2>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
@@ -209,16 +226,6 @@
 </details>
 </div></div>
   
-<h2 id="h_penalty">Receiving or distributing the slip</h2>
-<p>Slips are prepared by the employer or the payer. If the slip is late or lost, the worker can ask the payer of the slip for a copy. </p>
-<p>If the payer distributes the slips late or does not distribute, the payer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
-<p>Learn more:</p>
-<ul> 
-<li>Options if the worker does not expect to get the slip, <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
-<li>Obligations to distribute the slip, <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
-</li>	
-</ul>
-
 <div id="ajax-help">
 <h2 id="h_records">Keeping records</h2>
 <p>Individuals must keep track of all of the income that they earned and the expenses that they incurred for business purposes.</p>
