--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -125,12 +125,23 @@
  <details id="tab1"><summary>Self-employed</summary>
 <p>Understanding the self-employed's tax obligations:</p>
 <ul>
-<li><a href="#1a">Reporting the income earned on the income tax return</a> </li>
-<li><a href="#1b">Contributing to the CPP/QPP, EI and QPIP</a> </li>
-<li><a href="#1c">Withholding, remitting and reporting deductions for employees of the self-employed worker</a> </li>
+<li><a href="#1a">Receiving the slip</a> </li>
+<li><a href="#1b">Reporting the income earned on the self-employed's income tax return</a> </li>
+<li><a href="#1c">Contributing to the CPP/QPP, EI and QPIP</a> </li>
+<li><a href="#1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</a> </li>
 </ul> 
 
-<h3>Income tax obligations</h3>
+<h2 id="1a">Receiving the slip</h2>
+<p>Generally, the payer <strong>must</strong> provide the self-employed worker with a T4A or T4 slip which includes any payment made regardless if the income is taxable or not. </p>
+
+ <p>Learn more: </p>
+ <ul>
+<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></li>
+<li>Options if the self-employed worker does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
+ </ul>	
+
+<h2 id="1b">Reporting the income earned on the self-employed's income tax return</h2>
+
 <p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>	
@@ -160,6 +171,14 @@
 <li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+
+<h2 id="1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</h2>
+<p>The self-employed worker payroll and GST/HST tax obligations for employees of the self-employed worker are the same as regular employers.</p>
+
+<p>Learn more: </p>
+<ul><li><a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
+</ul>
 
 
 </details>
