--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -153,10 +153,10 @@
 <li><span class="fas fa-check text-success fa-li"></span> Legal expenses incurred by the corporation in collecting amounts owing </li>
 </ul>
  </li>
-<li>Report the PSB's income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
+<li>Report the PSB income on line 520 of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch7.html">Schedule 7</a>, Aggregate Investment Income and Income Eligible for the Small Business Deduction (SBD) because they are <strong>not eligible</strong> for the SBD</li>
 <li><strong>Not claim the SBD</strong> on line 430 of the T2 return because they are <strong>not eligible</strong> for the SBD</li>
-<li>Report the PSB's income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
-<li>Report the PSB's income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
+<li>Report the PSB income on line 432 of the T2 return because they are <strong>not eligible</strong> for the general tax reduction</li>
+<li>Report the PSB income on line 555 of the T2 return because they are subject to <strong>an additional 5%</strong></li>
 </ul>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return</a></p>
