--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -126,8 +126,8 @@
 <p>Understanding the self-employed's tax obligations:</p>
 <ul>
 <li><a href="#1a">Receiving the slip</a> </li>
-<li><a href="#1b">Reporting the income earned on the self-employed's income tax return</a> </li>
-<li><a href="#1c">Contributing to the CPP/QPP, EI and QPIP</a> </li>
+<li><a href="#1b">Remitting the GST/HST on payments made by the self-employed worker</a> </li>
+<li><a href="#1c">Reporting the income earned on the self-employed's income tax return</a> </li>
 <li><a href="#1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</a> </li>
 </ul> 
 
@@ -140,23 +140,27 @@
 <li>Options if the self-employed worker does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
  </ul>	
 
-<h2 id="1b">Reporting the income earned on the self-employed's income tax return</h2>
-
-<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>	
-</ul>
-
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
+<h2 id="1b">Remitting the GST/HST on payments made by the self-employed worker</h2>
+<p>Generally, the self-employed worker must remit the GST/HST on taxable supplies or services provided by them.</p>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
 
-<h3>CPP/QPP, EI and QPP obligations</h3>
-<p>Generally, the self-employed worker calculates their contributions and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker  participates in the special EI program</small></li>
+<h2 id="1c">Reporting the income earned on the self-employed's income tax return</h2>
+
+<p>When filing the <strong>T1 return</strong>, the self-employed worker must:</p>
+<ul>
+<li>Eligible to claim eligible expenses on XXX </li>	
+<li>Calculate their contributions and reports the following amounts:
+<ul class="fa-ul">
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker participates in the special EI program</small></li>
 <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
 <li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the self-employed worker works in the  <strong>Province of Quebec</strong></small></li>
 </ul>
+</li>	
+<li>Report the self-employed income on line XXX of the T1 return </li>	
+</ul>
+
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
 
 <p class="mrgn-tp-lg">Learn more: </p>
 <ul>
@@ -164,13 +168,6 @@
 <li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
 <li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
 </ul>
-
-<h3>GST/HST obligations</h3>
-<p>Generally, the self-employed worker remits the following on the payment made by them:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
 <h2 id="1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</h2>
 <p>The self-employed worker payroll and GST/HST tax obligations for employees of the self-employed worker are the same as regular employers.</p>
