--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -201,13 +201,13 @@
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
  <h2 id="2B">Reporting and distributing the slip</h2>
-<p>Generally, if the payer pays a self-employed worker, the payer <strong>must</strong> report the payment made to:</p> 
+<p>Generally, if the payer pays a self-employed worker, the payer <strong>must</strong> report on the following slip depending on who the payment made to:</p> 
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4>T4A slip</h4> 
+<li class="cnjnctn-col"><h4>T4 slip</h4> 
 <p>Self-employed fisher, barber, hairdresser, taxi driver, or a driver of other passenger vehicle</p>
 </li>	
-<li class="cnjnctn-col"><h4>T4 slip</h4> 
+<li class="cnjnctn-col"><h4>T4A slip</h4> 
 <p>Self-employed farmer and other self-employed workers</p>
 
 </li>
