--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -133,8 +133,7 @@
 
 <h2 id="1a">Receiving the slip</h2>
 <p>Generally, the payer <strong>must</strong> provide the self-employed worker with a T4A or T4 slip which includes any payment made regardless if the income is taxable or not. </p>
-
- <p>Learn more: </p>
+<p>Learn more: </p>
  <ul>
 <li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></li>
 <li>Options if the self-employed worker does not expect to get the slip: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
@@ -142,7 +141,7 @@
 
 <h2 id="1b">Remitting the GST/HST on payments made by the self-employed worker</h2>
 <p>Generally, the self-employed worker must remit the GST/HST on taxable supplies or services provided by them.</p>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
 
 <h2 id="1c">Reporting the income earned on the self-employed's income tax return</h2>
@@ -150,7 +149,15 @@
 <p>When filing the <strong>T1 return</strong>, the self-employed worker must:</p>
 <ul>
 <li>Eligible to claim eligible expenses on XXX </li>	
-<li>Calculate their contributions and reports the following amounts:
+<li>Calculate CPP/QPP contributions because a self-employed worker is responsible for both the employer’s and employee's contributions to the plan using:
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-s8.html">Schedule 8</a>, Canada Pension Plan Contributions and Overpayment (for all except QC) </li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/quebec/5005-s8.html">Schedule 8</a>, Quebec Pension Plan Contributions (for QC only)</li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc381.html">Form RC381</a>, Inter-Provincial Calculation for CPP and QPP Contributions and Overpayments</li>
+</ul>
+</li>
+
+
 <ul class="fa-ul">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker participates in the special EI program</small></li>
 <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
@@ -160,7 +167,7 @@
 <li>Report the self-employed income on line XXX of the T1 return </li>	
 </ul>
 
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
 
 <p class="mrgn-tp-lg">Learn more: </p>
 <ul>
